src/client/src/tests/snapshots/liquid_cache_client__tests__tpch_q3.snap
---
source: src/client/src/tests/mod.rs
expression: displayable.tree_render().to_string()
---
┌───────────────────────────┐
│  SortPreservingMergeExec  │
│    --------------------   │
│ revenue DESC, o_orderdate │
│    ASC NULLS LASTlimit:   │
│             10            │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       SortExec(TopK)      │
│    --------------------   │
│         limit: 10         │
│                           │
│      revenue@1 DESC,      │
│        o_orderdate@2      │
│       ASC NULLS LAST      │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       ProjectionExec      │
│    --------------------   │
│        l_orderkey:        │
│         l_orderkey        │
│                           │
│        o_orderdate:       │
│        o_orderdate        │
│                           │
│      o_shippriority:      │
│       o_shippriority      │
│                           │
│          revenue:         │
│        sum(lineitem       │
│        .l_extendedp       │
│ rice * Int64(1) - lineitem│
│        .l_discount)       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│           aggr:           │
│        sum(lineitem       │
│        .l_extendedp       │
│ rice * Int64(1) - lineitem│
│        .l_discount)       │
│                           │
│         group_by:         │
│  l_orderkey, o_orderdate, │
│       o_shippriority      │
│                           │
│           mode:           │
│      FinalPartitioned     │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│    CoalesceBatchesExec    │
│    --------------------   │
│     target_batch_size:    │
│           16384           │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│      RepartitionExec      │
│    --------------------   │
│ partition_count(in->out): │
│           8 -> 8          │
│                           │
│    partitioning_scheme:   │
│    Hash([l_orderkey@0,    │
│       o_orderdate@1,      │
│    o_shippriority@2], 8)  │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│           aggr:           │
│        sum(lineitem       │
│        .l_extendedp       │
│ rice * Int64(1) - lineitem│
│        .l_discount)       │
│                           │
│         group_by:         │
│  l_orderkey, o_orderdate, │
│       o_shippriority      │
│                           │
│       mode: Partial       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│    CoalesceBatchesExec    │
│    --------------------   │
│     target_batch_size:    │
│           16384           │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│        HashJoinExec       │
│    --------------------   │
│            on:            ├───────────────────────────────────────────┐
│ (o_orderkey = l_orderkey) │                                           │
└─────────────┬─────────────┘                                           │
┌─────────────┴─────────────┐                             ┌─────────────┴─────────────┐
│   CoalescePartitionsExec  │                             │   LiquidCacheClientExec   │
│                           │                             │    --------------------   │
│                           │                             │          server:          │
│                           │                             │  http://localhost:50051,  │
│                           │                             │        mode=liquid,       │
│                           │                             │      object_stores=[]     │
└─────────────┬─────────────┘                             └─────────────┬─────────────┘
┌─────────────┴─────────────┐                             ┌─────────────┴─────────────┐
│    CoalesceBatchesExec    │                             │      RepartitionExec      │
│    --------------------   │                             │    --------------------   │
│     target_batch_size:    │                             │ partition_count(in->out): │
│           16384           │                             │           1 -> 8          │
│                           │                             │                           │
│                           │                             │    partitioning_scheme:   │
│                           │                             │     RoundRobinBatch(8)    │
└─────────────┬─────────────┘                             └─────────────┬─────────────┘
┌─────────────┴─────────────┐                             ┌─────────────┴─────────────┐
│        HashJoinExec       │                             │       DataSourceExec      │
│    --------------------   │                             │    --------------------   │
│            on:            │                             │          files: 1         │
│  (c_custkey = o_custkey)  │                             │      format: parquet      │
│                           ├──────────────┐              │                           │
│                           │              │              │         predicate:        │
│                           │              │              │  l_shipdate > 1995-03-15  │
│                           │              │              │          AND true         │
└─────────────┬─────────────┘              │              └───────────────────────────┘
┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│   LiquidCacheClientExec   ││   LiquidCacheClientExec   │
│    --------------------   ││    --------------------   │
│          server:          ││          server:          │
│  http://localhost:50051,  ││  http://localhost:50051,  │
│        mode=liquid,       ││        mode=liquid,       │
│      object_stores=[]     ││      object_stores=[]     │
└─────────────┬─────────────┘└─────────────┬─────────────┘
┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│       DataSourceExec      ││      RepartitionExec      │
│    --------------------   ││    --------------------   │
│          files: 1         ││ partition_count(in->out): │
│      format: parquet      ││           1 -> 8          │
│                           ││                           │
│         predicate:        ││    partitioning_scheme:   │
│  c_mktsegment = BUILDING  ││     RoundRobinBatch(8)    │
└───────────────────────────┘└─────────────┬─────────────┘
                             ┌─────────────┴─────────────┐
                             │       DataSourceExec      │
                             │    --------------------   │
                             │          files: 1         │
                             │      format: parquet      │
                             │                           │
                             │         predicate:        │
                             │  o_orderdate < 1995-03-15 │
                             │          AND true         │
                             └───────────────────────────┘
