src/client/src/tests/snapshots/liquid_cache_client__tests__tpch_q5.snap
---
source: src/client/src/tests/mod.rs
expression: displayable.tree_render().to_string()
---
┌───────────────────────────┐
│  SortPreservingMergeExec  │
│    --------------------   │
│        revenue DESC       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│          SortExec         │
│    --------------------   │
│       revenue@1 DESC      │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       ProjectionExec      │
│    --------------------   │
│       n_name: n_name      │
│                           │
│          revenue:         │
│        sum(lineitem       │
│        .l_extendedp       │
│ rice * Int64(1) - lineitem│
│        .l_discount)       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│            aggr           │
│                           │
│      group_by: n_name     │
│                           │
│           mode:           │
│      FinalPartitioned     │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│    CoalesceBatchesExec    │
│    --------------------   │
│     target_batch_size:    │
│           16384           │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│      RepartitionExec      │
│    --------------------   │
│ partition_count(in->out): │
│           8 -> 8          │
│                           │
│    partitioning_scheme:   │
│    Hash([n_name@0], 8)    │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│            aggr           │
│                           │
│      group_by: n_name     │
│       mode: Partial       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│    CoalesceBatchesExec    │
│    --------------------   │
│     target_batch_size:    │
│           16384           │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│        HashJoinExec       │
│    --------------------   │
│            on:            ├──────────────┐
│(r_regionkey = n_regionkey)│              │
└─────────────┬─────────────┘              │
┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│   LiquidCacheClientExec   ││       ProjectionExec      │
│    --------------------   ││    --------------------   │
│          server:          ││        l_discount:        │
│  http://localhost:50051,  ││         l_discount        │
│        mode=liquid,       ││                           │
│      object_stores=[]     ││      l_extendedprice:     │
│                           ││      l_extendedprice      │
│                           ││                           │
│                           ││       n_name: n_name      │
│                           ││                           │
│                           ││        n_regionkey:       │
│                           ││        n_regionkey        │
└─────────────┬─────────────┘└─────────────┬─────────────┘
┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│       DataSourceExec      ││    CoalesceBatchesExec    │
│    --------------------   ││    --------------------   │
│          files: 1         ││     target_batch_size:    │
│      format: parquet      ││           16384           │
│                           ││                           │
│         predicate:        ││                           │
│       r_name = ASIA       ││                           │
└───────────────────────────┘└─────────────┬─────────────┘
                             ┌─────────────┴─────────────┐
                             │        HashJoinExec       │
                             │    --------------------   │
                             │            on:            ├──────────────┐
                             │(n_nationkey = s_nationkey)│              │
                             └─────────────┬─────────────┘              │
                             ┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                             │   LiquidCacheClientExec   ││       ProjectionExec      │
                             │    --------------------   ││    --------------------   │
                             │          server:          ││        l_discount:        │
                             │  http://localhost:50051,  ││         l_discount        │
                             │        mode=liquid,       ││                           │
                             │      object_stores=[]     ││      l_extendedprice:     │
                             │                           ││      l_extendedprice      │
                             │                           ││                           │
                             │                           ││        s_nationkey:       │
                             │                           ││        s_nationkey        │
                             └─────────────┬─────────────┘└─────────────┬─────────────┘
                             ┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                             │       DataSourceExec      ││    CoalesceBatchesExec    │
                             │    --------------------   ││    --------------------   │
                             │          files: 1         ││     target_batch_size:    │
                             │      format: parquet      ││           16384           │
                             └───────────────────────────┘└─────────────┬─────────────┘
                                                          ┌─────────────┴─────────────┐
                                                          │        HashJoinExec       │
                                                          │    --------------------   │
                                                          │            on:            │
                                                          │ (s_suppkey = l_suppkey),  ├──────────────┐
                                                          │       (s_nationkey =      │              │
                                                          │        c_nationkey)       │              │
                                                          └─────────────┬─────────────┘              │
                                                          ┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                                                          │   LiquidCacheClientExec   ││      RepartitionExec      │
                                                          │    --------------------   ││    --------------------   │
                                                          │          server:          ││ partition_count(in->out): │
                                                          │  http://localhost:50051,  ││           1 -> 8          │
                                                          │        mode=liquid,       ││                           │
                                                          │      object_stores=[]     ││    partitioning_scheme:   │
                                                          │                           ││     RoundRobinBatch(8)    │
                                                          └─────────────┬─────────────┘└─────────────┬─────────────┘
                                                          ┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                                                          │       DataSourceExec      ││    CoalesceBatchesExec    │
                                                          │    --------------------   ││    --------------------   │
                                                          │          files: 1         ││     target_batch_size:    │
                                                          │      format: parquet      ││           16384           │
                                                          └───────────────────────────┘└─────────────┬─────────────┘
                                                                                       ┌─────────────┴─────────────┐
                                                                                       │        HashJoinExec       │
                                                                                       │    --------------------   │
                                                                                       │            on:            ├───────────────────────────────────────────┐
                                                                                       │ (o_orderkey = l_orderkey) │                                           │
                                                                                       └─────────────┬─────────────┘                                           │
                                                                                       ┌─────────────┴─────────────┐                             ┌─────────────┴─────────────┐
                                                                                       │       ProjectionExec      │                             │   LiquidCacheClientExec   │
                                                                                       │    --------------------   │                             │    --------------------   │
                                                                                       │        c_nationkey:       │                             │          server:          │
                                                                                       │        c_nationkey        │                             │  http://localhost:50051,  │
                                                                                       │                           │                             │        mode=liquid,       │
                                                                                       │        o_orderkey:        │                             │      object_stores=[]     │
                                                                                       │         o_orderkey        │                             │                           │
                                                                                       └─────────────┬─────────────┘                             └─────────────┬─────────────┘
                                                                                       ┌─────────────┴─────────────┐                             ┌─────────────┴─────────────┐
                                                                                       │    CoalesceBatchesExec    │                             │       DataSourceExec      │
                                                                                       │    --------------------   │                             │    --------------------   │
                                                                                       │     target_batch_size:    │                             │          files: 1         │
                                                                                       │           16384           │                             │      format: parquet      │
                                                                                       └─────────────┬─────────────┘                             └───────────────────────────┘
                                                                                       ┌─────────────┴─────────────┐
                                                                                       │        HashJoinExec       │
                                                                                       │    --------------------   │
                                                                                       │            on:            ├──────────────┐
                                                                                       │  (o_custkey = c_custkey)  │              │
                                                                                       └─────────────┬─────────────┘              │
                                                                                       ┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                                                                                       │   LiquidCacheClientExec   ││   LiquidCacheClientExec   │
                                                                                       │    --------------------   ││    --------------------   │
                                                                                       │          server:          ││          server:          │
                                                                                       │  http://localhost:50051,  ││  http://localhost:50051,  │
                                                                                       │        mode=liquid,       ││        mode=liquid,       │
                                                                                       │      object_stores=[]     ││      object_stores=[]     │
                                                                                       └─────────────┬─────────────┘└─────────────┬─────────────┘
                                                                                       ┌─────────────┴─────────────┐┌─────────────┴─────────────┐
                                                                                       │       DataSourceExec      ││       DataSourceExec      │
                                                                                       │    --------------------   ││    --------------------   │
                                                                                       │          files: 1         ││          files: 1         │
                                                                                       │      format: parquet      ││      format: parquet      │
                                                                                       │                           ││                           │
                                                                                       │         predicate:        ││                           │
                                                                                       │ o_orderdate >= 1994-01-01 ││                           │
                                                                                       │   AND o_orderdate < 1995  ││                           │
                                                                                       │           -01-01          ││                           │
                                                                                       └───────────────────────────┘└───────────────────────────┘
