src/client/src/tests/snapshots/liquid_cache_client__tests__tpch_q6.snap
---
source: src/client/src/tests/mod.rs
expression: displayable.tree_render().to_string()
---
┌───────────────────────────┐
│       ProjectionExec      │
│    --------------------   │
│          revenue:         │
│        sum(lineitem       │
│        .l_extendedp       │
│rice * lineitem.l_discount)│
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│           aggr:           │
│        sum(lineitem       │
│        .l_extendedp       │
│rice * lineitem.l_discount)│
│                           │
│        mode: Final        │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│   CoalescePartitionsExec  │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│   LiquidCacheClientExec   │
│    --------------------   │
│          server:          │
│  http://localhost:50051,  │
│        mode=liquid,       │
│      object_stores=[]     │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│           aggr:           │
│        sum(lineitem       │
│        .l_extendedp       │
│rice * lineitem.l_discount)│
│                           │
│       mode: Partial       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│      RepartitionExec      │
│    --------------------   │
│ partition_count(in->out): │
│           1 -> 8          │
│                           │
│    partitioning_scheme:   │
│     RoundRobinBatch(8)    │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       DataSourceExec      │
│    --------------------   │
│          files: 1         │
│      format: parquet      │
│                           │
│         predicate:        │
│  l_shipdate >= 1994-01-01 │
│    AND l_shipdate < 1995  │
│  -01-01 AND l_discount >= │
│      Some(5),15,2 AND     │
│        l_discount <=      │
│      Some(7),15,2 AND     │
│      l_quantity < Some    │
│        (2400),15,2        │
└───────────────────────────┘
